# FaultInjectionLab

./: README.md
attacker/: CMakeLists.txt
attacker/power_glitch/: CMakeLists.txt  power_glitch.c  power_glitch.pio
victim/00_loop/: .gitignore  Makefile  trigger.c  trigger.h  uart.c  uart.h  victim.c
